--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jung0115.github.io/nomad-movie-app"
+  "homepage": "https://jung0115.github.io/nomad-movie-app/"
 }
